
0.9.8e Jun 01, 2004
 * refactored working_dir_init()
 * cleaned up parse_meta_entry() and lookup_pkg_dependencies()
 * moved parse_exclude() from configuration.c to package.c
 * only show download statistics if we are going to download something, not for
   removes only
 * updated handle_transaction so that the size reported for existing
   downloaded data is never below zero
 * fixed translation msgid for checksum mismatch
 * updated translations (added entry for existing download and
   removed "cached copy")
 * transaction report now shows total download size with the amount of already
   downloaded (if some packages have already been downloaded or are incomplete)
 * changed return codes to named variables
 * refactored download_pkg, created verify_downloaded_pkg() and get_pkg_file_size()
 * removed unused head_request code
 * initialized size_u and size_c to 0 for pkg in init_pkg()
 * added FAQ concerning removing obsoleted packages
 * updated INSTALL guide with more explicit cvs directions
 * write package data to temp file during --update, merge into final package_data
   file upon successful download of all package data sources. Thanks go to
   Matthew Robinson (moo@ooo.com) for the idea.
 * renamed variables in update_pkg_cache() to designate files (_f)
 * removed legacy parse_file_list()
 * initialized global_config->no_prompt and global_config->re_install
 * moved create_dir_structure() and gen_md5_sum_of_file() and to common.[ch]
 * created gen_pkg_file_name() and gen_pkg_url() functions
 * tightened up scope on some variables
 * pkg_action_show no longer uses a temp pkg_info_t, just 2 char *
 * updated FAQ, added question about mirroring and bash tab completion
 * moved create_dir_structure from configuration.[ch] to curl.[ch]
 * get compressed and uncompressed information from package log in
   get_installed_pkgs(), and updated transaction handler.
   Transaction report now shows correct sizes for removing packages as well as