@@ -1,5 +1,7 @@
 
 0.9.8e Jun 01, 2004
+ * added check for package name and version lengths in
+   pkg_action_install() and pkg_action_show()
  * refactored working_dir_init()
  * cleaned up parse_meta_entry() and lookup_pkg_dependencies()
  * moved parse_exclude() from configuration.c to package.c
